# crewai-business-crews

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/crewai_business_crews/: __init__.py  cli.py  core.py
tests/: test_core.py
