[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-business-crews"
version = "0.1.0"
description = "Pre-built CrewAI crew definitions for eight business verticals."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/crewai-business-crews"
Issues = "https://github.com/erron-ai/crewai-business-crews/issues"

[project.scripts]
crewai-business-crews = "crewai_business_crews.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
